сделаны следующее: Взять из бд все поля с кол-вом шагов за неделю, возвратить сумму Int, Взят из бд все поля с кол-вом шагов за месяц, возвратить сумму Int. + запросы для stepdao

--- a/app/src/main/res/layout/fragment_steps.xml
+++ b/app/src/main/res/layout/fragment_steps.xml
@@ -228,6 +228,7 @@
 
                 <TextView
                     style="@style/diagramsDigitsStyle"
+                    android:id="@+id/countOfStepsForMonthText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="@id/stepsDiagram1"
