--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
@@ -9,10 +10,9 @@
     <color name="textcolor_purple">#483867</color>
     <color name="textcolor_blue">#A9B7FF</color>
 
-    <color name="status_bar_color">#A9B7FF</color>
-    <color name="navigation_bar_color">#83B0FA</color>
+    <color name="status_bar_color">#000000</color>
+    <color name="navigation_bar_color">#000000</color>
 
-    <color name="tint_color">#C4C4C4</color>
-    <color name="tint_color_night">#EBEBF5</color>
+    <color name="tint_color">#EBEBF5</color>
 
 </resources>
