--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,8 +3,8 @@
     <style name="Base.Theme.HealthCheck" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
-        <item name="android:navigationBarColor">@color/black</item>
-        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:navigationBarColor">@color/navigation_bar_color</item>
+        <item name="android:statusBarColor">@color/status_bar_color</item>
 
     </style>
 
@@ -59,7 +59,7 @@
     <style name="hint1">
         <item name="fontFamily">@font/inter_medium</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColorHint">@color/tint_color_night</item>
+        <item name="android:textColorHint">@color/tint_color</item>
     </style>
 
 </resources>
