Сделал отмену уведомлений при завершении курса

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -213,5 +213,8 @@
             app:argType="integer" />
         <argument android:name="totalDuractionOfCourse"
             app:argType="integer" />
+        <argument
+            android:name="id"
+            app:argType="long" />
     </fragment>
 </navigation>
