Пофиксил баги с темами

--- a/app/src/main/res/layout/fragment_add_medicines.xml
+++ b/app/src/main/res/layout/fragment_add_medicines.xml
@@ -90,17 +90,18 @@
                 android:layout_marginTop="5dp">
                 
                 <EditText
+                    style="@style/hint1"
                     android:id="@+id/getTitle"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    style="@style/hint1"
                     android:layout_width="match_parent"
                     android:layout_height="77dp"
                     android:background="@drawable/box"
                     android:hint="@string/title"
                     android:paddingStart="10dp"
+                    android:inputType="textCapSentences"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
