--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -122,7 +122,7 @@
                 app:layout_constraintTop_toBottomOf="@id/nearestActBox"
                 android:text="@string/_day"
                 android:gravity="center"
-                android:textColor="@color/textcolor_white"
+                android:textColor="@color/textcolor_choosen"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="15dp"
                 />
