--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,6 +9,8 @@
     <color name="textcolor_white">#FFFFFF</color>
     <color name="textcolor_purple">#483867</color>
     <color name="textcolor_blue">#A9B7FF</color>
+    <color name="textcolor_choosen">#FFFFFF</color>
+    <color name="textcolor_unchoosen">#EBEBF5</color>
 
     <color name="status_bar_color">#000000</color>
     <color name="navigation_bar_color">#000000</color>
