--- a/app/src/main/res/layout/medicines_item.xml
+++ b/app/src/main/res/layout/medicines_item.xml
@@ -87,6 +87,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             />
 
+        <TextView
+            style="@style/hint1"
+            android:id="@+id/nearestTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/checkbox"
+            app:layout_constraintTop_toTopOf="@id/checkbox"
+            app:layout_constraintBottom_toBottomOf="@id/checkbox"
+            android:text="время"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Space
