--- a/app/src/main/res/layout/fragment_main_1.xml
+++ b/app/src/main/res/layout/fragment_main_1.xml
@@ -68,6 +68,7 @@
 
             <TextView
                 style="@style/diagramsDigitsStyle"
+                android:id="@+id/main1CountOfStepsDay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="@id/progressBarSteps"
