--- a/app/src/main/res/layout/fragment_sleep.xml
+++ b/app/src/main/res/layout/fragment_sleep.xml
@@ -202,6 +202,7 @@
 
                 <TextView
                     style="@style/zagalovok1"
+                    android:id="@+id/averageSleepWeek"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="@id/box1"
@@ -272,6 +273,7 @@
 
                 <TextView
                     style="@style/zagalovok1"
+                    android:id="@+id/averageSleepMonth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="@id/box2"
