Добавление сна на главный экран

--- a/app/src/main/res/layout/fragment_main_3.xml
+++ b/app/src/main/res/layout/fragment_main_3.xml
@@ -138,6 +138,7 @@
 
         <TextView
             style="@style/zagalovok1"
+            android:id="@+id/sleepHoursMonth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/sleepTitle"
